# northstar-reader

./: .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
docs/: GITHUB-READINESS.md  INSTALL-AND-USE.md
docs/superpowers/mockups/: reading-progress-placement.html
docs/superpowers/plans/: 2026-05-04-reading-progress-indicator.md
docs/superpowers/specs/: 2026-05-04-reading-progress-indicator-design.md
scripts/: capture-pdf-mark-screenshot.mjs  cargo_check_vsdev.bat  github-create-and-push.ps1  tauri_build_vsenv.bat  tauri_dev_vsenv.bat
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  lib.rs  main.rs  models.rs  state.rs  webview_bootstrap.rs
src-tauri/src/commands/: files.rs  mod.rs  search.rs  vault.rs  watch.rs
src-tauri/src/services/: fs_ops.rs  indexer.rs  mod.rs  recents.rs  vaults.rs  watcher.rs
src-tauri/src/storage/: atomic_write.rs  index_db.rs  mod.rs
src-tauri/src/util/: paths.rs
src/app/: App.tsx  app-shell.css
src/features/editor/: editor.css
src/features/editor/components/: EditorPreview.tsx
src/features/inspector/: inspector.css
src/features/inspector/components/: BacklinksPanel.tsx  PropertiesPanel.tsx
src/features/navigation/: navigation.css
src/features/reader/: pdf.ts  progress.ts  storage.ts  types.ts
src/features/search/: search.css
src/features/tabs/: tabs.css
src/shared/api/: vaultApi.ts
src/shared/lib/: markdown.ts  tauri.ts
src/styles/: base.css  tokens.css
(+7 files in other folders)
